--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,9 +5,11 @@
 
 #root {
   box-sizing: border-box;
-  max-width: 1280px;
+  width: 100%;
+  height: 100vh;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
