--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -23,6 +27,7 @@ a:hover {
 }
 
 body {
+	box-sizing: border-box;
   margin: 0;
   display: flex;
   place-items: center;
