--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,5 @@
 .btn-cta {
-  @apply mt-6 h-14 w-full rounded-lg bg-sky-600 px-4 py-6 text-xl text-sky-100 hover:bg-sky-700 hover:shadow-sm active:scale-[99%] active:bg-sky-800;
+  @apply mt-6 h-14 w-full rounded-lg bg-sky-700 px-4 py-6 text-xl text-white hover:bg-sky-800 hover:shadow-sm active:scale-[99%] active:bg-sky-900;
 }
 
 .btn-ter {
